--- a/assets/styles/scss/base/_block-text.scss
+++ b/assets/styles/scss/base/_block-text.scss
@@ -56,14 +56,13 @@ li {
 }
 
 /* -------------------------------------------------------------------------- *\
-// -  <<--------------------<< NON-SEMANTIC  >>-------------------->>
+// -  <<--------------------<< CONTENT >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
-// #  <---------------| <div> |--------------->
-
-/* -------------------------------------------------------------------------- *\
-// -  <<--------------------<< OTHER >>-------------------->>
-\* -------------------------------------------------------------------------- */
+// #  <---------------| <address> |--------------->
+address {
+  font-style: normal;
+}
 
 // #  <---------------| <blockquote> |--------------->
 blockquote {
@@ -91,7 +90,6 @@ blockquote {
     font-style: normal;
   }
 }
-
 // #  <---------------| <hr> |--------------->
 hr {
   width: 100%;
@@ -154,9 +152,4 @@ pre {
     display: block;
     overflow-x: auto;
   }
-}
-
-// #  <---------------| <address> |--------------->
-address {
-  font-style: normal;
 }
