--- a/assets/styles/scss/base/_root.scss
+++ b/assets/styles/scss/base/_root.scss
@@ -7,13 +7,13 @@
   padding: 0;
   border: 0;
   margin: 0;
-  width: 100%;
-  height: auto;
+  // width: 100%;
+  // height: auto;
 }
 
 // #  <---------------| <html> |--------------->
 html {
-  @include font-sizes--responsive(40rem, 60rem, 1rem, 1.5rem);
+  @include font-sizes--responsive(40rem, 60rem, 1rem, 1.25rem);
   @include scrollbar-style(
     $size: calc(#{$buffer--s} + #{$buffer--xs}),
     $color: var(--color-tertiary)
