--- a/assets/styles/scss/base/_sectioning.scss
+++ b/assets/styles/scss/base/_sectioning.scss
@@ -3,7 +3,7 @@
 \* -------------------------------------------------------------------------- */
 
 /* -------------------------------------------------------------------------- *\
--  <<--------------------<< MAIN SECTIONING >>-------------------->>
+-  <<--------------------<< MAIN >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 // #  <---------------| <nav> |--------------->
@@ -30,7 +30,7 @@ aside {
 }
 
 /* -------------------------------------------------------------------------- *\
--  <<--------------------<< SUB SECTIONING >>-------------------->>
+-  <<--------------------<< SUB >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
 // #  <---------------| <header> |--------------->
@@ -41,7 +41,10 @@ header {
 // #  <---------------| <footer> |--------------->
 footer {
   padding: $buffer--s;
-
-  border-top: 1px solid var(--border);
-  padding-top: 10px;
 }
+
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< NON-SEMANTIC  >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
+// #  <---------------| <div> |--------------->
