--- a/assets/styles/scss/base/_heading.scss
+++ b/assets/styles/scss/base/_heading.scss
@@ -2,6 +2,10 @@
 *  <<--------------------<< HEADING >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
+/* -------------------------------------------------------------------------- *\
+-  <<--------------------<< Heading >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
 // #  <---------------| <h1> |--------------->
 h1 {
   padding: $buffer--l $buffer--s;
@@ -14,6 +18,12 @@ h1 {
   line-height: $line-height--subject;
   text-align: $text-align--subject;
   text-transform: $text-transform--subject;
+
+  + p::first-letter {
+    color: var(--color-secondary);
+    font-size: $font-size--3;
+    line-height: $line-height--article-title;
+  }
 }
 
 // #  <---------------| <h2> |--------------->
