--- a/assets/styles/scss/base/_inline-text.scss
+++ b/assets/styles/scss/base/_inline-text.scss
@@ -6,8 +6,6 @@
 // -  <<--------------------<< VISUAL >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
-// -  <---------------| Semantic |--------------->
-
 // #  <---------------| <b> |--------------->
 b {
   font-weight: 600;
@@ -27,7 +25,7 @@ code {
 // #  <---------------| <i> |--------------->
 
 // #  <---------------| <kbd> |--------------->
-kbd { 
+kbd {
   background: var(--background);
   border: 1px solid var(--border);
   border-radius: 2px;
@@ -74,10 +72,6 @@ var {
   font-style: normal;
   font-family: monospace;
 }
-
-// -  <---------------| Non-Semantic |--------------->
-
-// #  <---------------| <span> |--------------->
 
 /* -------------------------------------------------------------------------- *\
 // -  <<--------------------<< FUNCTIONAL >>-------------------->>
@@ -181,3 +175,9 @@ time {
 }
 
 // #  <---------------| <wbr> |--------------->
+
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< NON-SEMANTIC >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
+// #  <---------------| <span> |--------------->
