--- a/assets/styles/scss/base/_interactive.scss
+++ b/assets/styles/scss/base/_interactive.scss
@@ -2,6 +2,10 @@
 // *  <<--------------------<< INTERACTIVE >>-------------------->>
 \* -------------------------------------------------------------------------- */
 
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< Disclosure Widget >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
 // #  <---------------| <details> |--------------->
 details {
   display: flex;
@@ -25,6 +29,13 @@ details {
     margin-bottom: 10px;
   }
 }
+
+// #  <---------------| <summary> |--------------->
+
+/* -------------------------------------------------------------------------- *\
+// -  <<--------------------<< Other >>-------------------->>
+\* -------------------------------------------------------------------------- */
+
 // #  <---------------| <dialog> |--------------->
 dialog {
   background-color: var(--background-alt);
@@ -49,5 +60,3 @@ dialog {
 }
 
 // #  <---------------| <menu> |--------------->
-
-// #  <---------------| <summary> |--------------->
