--- a/assets/styles/scss/abstracts/_mixins.scss
+++ b/assets/styles/scss/abstracts/_mixins.scss
@@ -4,7 +4,7 @@
 
 // -  <---------------| Import Generic Mixin Partials |--------------->
 @import 'mixins/breakpoints';
-@import 'mixins/color-palette';
+@import 'mixins/colors';
 @import 'mixins/containers';
 @import 'mixins/typography';
 @import 'mixins/shadows';
