--- a/assets/styles/scss/themes/_light--v2.scss
+++ b/assets/styles/scss/themes/_light--v2.scss
@@ -8,9 +8,9 @@
 
 :root,
 [data-theme='light--v2'] {
-  /* ------------------------------------------------------------------------ *\
-// -  <<--------------------<< TRANSPARANT BG COLORS >>-------------------->>
-\* -------------------------------------------------------------------------- */
+  /* - ----------------------------------------------------------------------- */
+  /* - <<--------------------<< TRANSPARANT BG COLORS >>-------------------->> */
+  /* - ----------------------------------------------------------------------- */
 
   --bg-color--transparant---sofest: hsla(0, 0%, 100%, 0.05);
   --bg-color--transparant---softer: hsla(0, 0%, 100%, 0.2);
@@ -36,22 +36,15 @@
   --highlight: #ff0;
   // --select-arrow: svg-load('./assets/select-arrow.svg', fill: #161f27);
 
-  /* ------------------------------------------------------------------------ *\
-// -  <<--------------------<< REGULAR COLORS >>-------------------->>
-\* -------------------------------------------------------------------------- */
+  /* -  ---------------------------------------------------------------- */
+  /* -  <<--------------------<< REGULAR COLORS >>-------------------->> */
+  /* -  ---------------------------------------------------------------- */
 
-  // #  <---------------| #000033 : Black Rock Variant |--------------->
-  @include color-palette('foreground', 240, 100%, 10%, false);
-
-  // #  <---------------| #f8f8ff : White Lilac Variant |--------------->
-  @include color-palette('background', 240, 100%, 98.6%, false);
-
-  // #  <---------------| #022e51 : Prussian Blue Variant |--------------->
-  @include color-palette('primary', 206.6, 95.2%, 16.3%, true);
-
-  // #  <---------------| #4676b9 : San Marino Variant |--------------->
-  @include color-palette('secondary', 215, 45.1%, 50%, true);
-
-  // #  <---------------| #b78846 : Driftwood Variant |--------------->
-  @include color-palette('tertiary', 35, 44.7%, 49.6%, true);
+  @include color-palette(
+    $text: #000033,
+    $background: #f8f8ff,
+    $primary: #022e51,
+    $secondary: #4676b9,
+    $tertiary: #b78846
+  );
 }
